@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.jxust.tutor {
    namespace adapters {
      class com.jxust.tutor.adapters.CustomTutorDayTimeAdapter {
          ~ USER_ID : int
          ~ context : Context
          ~ date : String
          ~ items : List<TutorDayTimeRowitem>
          + CustomTutorDayTimeAdapter()
          + getView()
      }
    }
  }
  

  namespace com.jxust.tutor {
    namespace adapters {
      class com.jxust.tutor.adapters.CustomTutorDayTimeAdapter.ViewHolder {
          ~ imageView : ImageView
          ~ txtText : TextView
      }
    }
  }
  

  namespace com.jxust.tutor {
    namespace adapters {
      class com.jxust.tutor.adapters.TutorDayTimeRowitem {
          - text : String
          + TutorDayTimeRowitem()
          + getText()
          + setText()
          + toString()
      }
    }
  }
  

  com.jxust.tutor.adapters.CustomTutorDayTimeAdapter -up-|> android.widget.ArrayAdapter
  com.jxust.tutor.adapters.CustomTutorDayTimeAdapter o-- com.jxust.tutor.helpers.DateFormatHelper : formatHelper
  com.jxust.tutor.adapters.CustomTutorDayTimeAdapter +-down- com.jxust.tutor.adapters.CustomTutorDayTimeAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
